--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.0.15",
+    "@nestjs/swagger": "^11.1.2",
     "@nestjs/typeorm": "11.0.0",
+    "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "3.14.0",
     "passport": "^0.7.0",
@@ -33,6 +35,7 @@
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
     "rxjs": "7.8.2",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.22"
   },
   "devDependencies": {
