--- a/s2t/Dockerfile
+++ b/s2t/Dockerfile
@@ -3,6 +3,7 @@ FROM node:20.17-slim
 RUN apt-get update && apt-get install -y \
     git \
     curl \
+    ffmpeg \
     python3 \
     python3-pip \
     && rm -rf /var/lib/apt/lists/*
