--- a/server/package.json
+++ b/server/package.json
@@ -44,8 +44,9 @@
     "@nestjs/cli": "11.0.6",
     "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "11.0.15",
-    "@types/express": "5.0.1",
+    "@types/express": "^5.0.1",
     "@types/jest": "29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "22.14.1",
     "@types/supertest": "6.0.3",
     "eslint": "9.24.0",
