--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "11.0.0",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
+    "livekit-server-sdk": "^2.12.0",
     "mysql2": "3.14.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
