--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "livekit-server-sdk": "^2.12.0",
     "mysql2": "3.14.0",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
@@ -45,10 +46,12 @@
     "@nestjs/cli": "11.0.6",
     "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "11.0.15",
+    "@types/cron": "^2.0.1",
     "@types/express": "^5.0.1",
     "@types/jest": "29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "22.14.1",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "6.0.3",
     "eslint": "9.24.0",
     "eslint-plugin-prettier": "5.2.6",
