--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,6 +3,7 @@ FROM node:20.17-slim
 RUN apt-get update && apt-get install -y \
     git \
     curl \
+    libnss3-tools \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
